--- a/styles/styles.css
+++ b/styles/styles.css
@@ -402,6 +402,23 @@ html {
 body {
   font-size: 16px; }
 
+nav {
+  display: none;
+  position: relative;
+  transition: .5s linear; }
+  nav .brand-logo {
+    position: absolute;
+    top: -16px; }
+
+.sticky {
+  display: block;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
 header #top-logo {
   display: block;
   margin: auto;
