--- a/styles/styles.css
+++ b/styles/styles.css
@@ -402,22 +402,49 @@ html {
 body {
   font-size: 16px; }
 
-nav {
-  display: none;
+.my-nav {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 5px 0px 2px grey;
+  z-index: 1;
   position: relative;
-  transition: .5s linear; }
-  nav .brand-logo {
-    position: absolute;
-    top: -16px; }
+  top: -100;
+  transition: 1s linear; }
+  .my-nav ul {
+    margin: 0; }
+  .my-nav .nav-top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+    height: 60px;
+    background-color: white;
+    transition: .4s linear;
+    z-index: 1; }
+    .my-nav .nav-top-bar .hamburger {
+      cursor: pointer; }
+  .my-nav .dropdown-links {
+    display: none;
+    background-color: white;
+    padding: 20px;
+    padding-top: 0px;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 5px 0px 2px grey;
+    transition: 1s linear; }
+    .my-nav .dropdown-links li a {
+      color: black;
+      line-height: 1.75em;
+      font-weight: 400;
+      font-style: italic;
+      border-bottom: 1px solid #C7C7C7; }
 
 .sticky {
-  display: block;
   position: fixed;
   z-index: 1000;
   top: 0;
-  left: 0;
   right: 0;
-  bottom: 0; }
+  left: 0; }
 
 header #top-logo {
   display: block;
