carousel, swapper and dropdown are all blowing your fucking mind right now

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,12 @@
 @import
   "normalize",
+  "materialize-form-colors",
   "vars",
+  "mixins",
   "my-styles",
-  "materialize-form-colors";
+  //components
+  "navbar",
+  "work",
+  "about",
+  "case-studies",
+  "swapper";
