--- a/styles/_my-styles.scss
+++ b/styles/_my-styles.scss
@@ -17,72 +17,16 @@ body {
   font-size: 16px;
 }
 
-//whole nav, including dropdown links and links visible in uncollapsed navbar
-.my-nav {
-  //logo and hamburger in one cell, dropdown links in another below them
-  display: flex;
-  flex-direction: column;
-
-  //gives whole nav shadow
-  box-shadow: 5px 0px 2px grey;
-  z-index: 1;
-  position: relative;
-  top: -100;
-  transition: 1s linear;
-  ul {
-    margin: 0;
-  }
-  .nav-top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 20px;
-    height: 60px;
-    background-color: white;
-    transition: .4s linear;
-
-    z-index: 1;
-    .hamburger {
-      cursor: pointer;
-    }
-  }
-  .navbar-links {
-  }
-  .dropdown-links {
-    display: none;
-    background-color: white;
-    padding: 20px;
-    padding-top: 0px;
-    text-align: center;
-    text-transform: uppercase;
-    box-shadow: 5px 0px 2px grey;
-    transition: 1s linear;
-    li a {
-      color: black;
-      line-height: 1.75em;
-      font-weight: 400;
-      font-style: italic;
-      border-bottom: 1px solid $light-grey;
-    }
-  }
-}
-
-.sticky {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  left: 0;
-}
-
 header {
-  #top-logo {
-    display: block;
-    margin: auto;
-    margin-bottom: -35px;
+  text-align: center;
+  h1 {
+    font-weight: 700;
+    font-size: 40px;
+    font-style: italic;
+    text-transform: uppercase;
+
   }
   p {
-    text-align: center;
     font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-style: italic;
@@ -92,6 +36,7 @@ header {
 //basic section styles
 section {
   padding: 30px;
+  min-width: 200px;
   h3 {
     text-transform: uppercase;
     text-align: center;
@@ -120,6 +65,22 @@ section {
   margin: 20px auto;
 }
 
+#contact {
+  form {
+    max-width: $tablet-width;
+    margin: auto;
+  }
+  .button {
+    display: block;
+    margin: auto;
+    background-color: black;
+    color: white;
+    font-family: "roboto condensed", sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    font-size: 1.5em;
+  }
+}
 footer {
   padding: 30px;
   a {
@@ -131,51 +92,5 @@ footer {
     text-decoration: none;
     text-align: center;
     color: $dark-grey;
-  }
-}
-
-
-//thumbnails of each project on the landing page
-.project-thumb {
-  height: 220px;
-  background: center center no-repeat;
-  background-size: cover;
-}
-
-//bg images for each individual project
-#style360 {
-  background-image: url('../images/style360.png');
-}
-
-#pokemon {
-  background-image: url('../images/pokemon.png');
-}
-
-#ebird
- {
-  background-image: url('../images/ebird.png');
-}
-
-#sandwich {
-  background-image: url('../images/sandwich.png');
-}
-
-#about {
-  img {
-    display: block;
-    margin: 30px auto;
-  }
-}
-
-#contact {
-  .button {
-    display: block;
-    margin: auto;
-    background-color: black;
-    color: white;
-    font-family: "roboto condensed", sans-serif;
-    font-style: italic;
-    font-weight: 700;
-    font-size: 1.5em;
   }
 }
