--- a/styles/styles.css
+++ b/styles/styles.css
@@ -389,139 +389,6 @@ template {
 [hidden] {
   display: none; }
 
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit; }
-
-body {
-  font-size: 16px; }
-
-.my-nav {
-  display: flex;
-  flex-direction: column;
-  box-shadow: 5px 0px 2px grey;
-  z-index: 1;
-  position: relative;
-  top: -100;
-  transition: 1s linear; }
-  .my-nav ul {
-    margin: 0; }
-  .my-nav .nav-top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 20px;
-    height: 60px;
-    background-color: white;
-    transition: .4s linear;
-    z-index: 1; }
-    .my-nav .nav-top-bar .hamburger {
-      cursor: pointer; }
-  .my-nav .dropdown-links {
-    display: none;
-    background-color: white;
-    padding: 20px;
-    padding-top: 0px;
-    text-align: center;
-    text-transform: uppercase;
-    box-shadow: 5px 0px 2px grey;
-    transition: 1s linear; }
-    .my-nav .dropdown-links li a {
-      color: black;
-      line-height: 1.75em;
-      font-weight: 400;
-      font-style: italic;
-      border-bottom: 1px solid #C7C7C7; }
-
-.sticky {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  left: 0; }
-
-header #top-logo {
-  display: block;
-  margin: auto;
-  margin-bottom: -35px; }
-header p {
-  text-align: center;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: 400;
-  font-style: italic; }
-
-section {
-  padding: 30px; }
-  section h3 {
-    text-transform: uppercase;
-    text-align: center;
-    font-family: "roboto condensed", sans-serif;
-    font-style: italic;
-    color: #4D4D4D; }
-  section p {
-    line-height: 1.5em;
-    font-weight: 700; }
-
-.light-bg {
-  background-color: #E1E1E1; }
-
-.horizontal-line {
-  border-top: 2px solid #C7C7C7;
-  margin: 20px auto; }
-
-.horizontal-line-dark {
-  border-top: 1px solid #C7C7C7;
-  margin: 20px auto; }
-
-footer {
-  padding: 30px; }
-  footer a {
-    display: block;
-    font-family: "roboto condensed" sans-serif;
-    font-style: italic;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-    color: #333333; }
-
-.project-thumb {
-  height: 220px;
-  background: center center no-repeat;
-  background-size: cover; }
-
-#style360 {
-  background-image: url("../images/style360.png"); }
-
-#pokemon {
-  background-image: url("../images/pokemon.png"); }
-
-#ebird {
-  background-image: url("../images/ebird.png"); }
-
-#sandwich {
-  background-image: url("../images/sandwich.png"); }
-
-#about img {
-  display: block;
-  margin: 30px auto; }
-
-#contact .button {
-  display: block;
-  margin: auto;
-  background-color: black;
-  color: white;
-  font-family: "roboto condensed", sans-serif;
-  font-style: italic;
-  font-weight: 700;
-  font-size: 1.5em; }
-
 /* label color */
 .input-field label {
   color: #000; }
@@ -548,5 +415,193 @@ footer {
 /* icon prefix focus color */
 .input-field .prefix.active {
   color: #000; }
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit; }
+
+body {
+  font-size: 16px; }
+
+header {
+  text-align: center; }
+  header h1 {
+    font-weight: 700;
+    font-size: 40px;
+    font-style: italic;
+    text-transform: uppercase; }
+  header p {
+    font-family: "Roboto Condensed", sans-serif;
+    font-weight: 400;
+    font-style: italic; }
+
+section {
+  padding: 30px;
+  min-width: 200px; }
+  section h3 {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: "roboto condensed", sans-serif;
+    font-style: italic;
+    color: #4D4D4D; }
+  section p {
+    line-height: 1.5em;
+    font-weight: 700; }
+
+.light-bg {
+  background-color: #E1E1E1; }
+
+.horizontal-line {
+  border-top: 2px solid #C7C7C7;
+  margin: 20px auto; }
+
+.horizontal-line-dark {
+  border-top: 1px solid #C7C7C7;
+  margin: 20px auto; }
+
+#contact form {
+  max-width: 768px;
+  margin: auto; }
+#contact .button {
+  display: block;
+  margin: auto;
+  background-color: black;
+  color: white;
+  font-family: "roboto condensed", sans-serif;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 1.5em; }
+
+footer {
+  padding: 30px; }
+  footer a {
+    display: block;
+    font-family: "roboto condensed" sans-serif;
+    font-style: italic;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    color: #333333; }
+
+.my-nav {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 5px 0px 2px grey;
+  z-index: 1; }
+  .my-nav ul {
+    margin: 0; }
+  .my-nav .nav-top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+    height: 60px;
+    background-color: white;
+    transition: .4s linear; }
+    .my-nav .nav-top-bar .hamburger {
+      cursor: pointer; }
+      @media (min-width: 768px) {
+        .my-nav .nav-top-bar .hamburger {
+          display: none; } }
+  .my-nav .dropdown-links {
+    display: none;
+    background-color: white;
+    padding: 20px;
+    padding-top: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 5px 0px 2px grey;
+    transition: 1s linear; }
+    .my-nav .dropdown-links li a {
+      color: black;
+      line-height: 1.75em;
+      font-weight: 400;
+      font-style: italic;
+      border-bottom: 1px solid #C7C7C7; }
+  .my-nav .navbar-links {
+    display: none; }
+    @media (min-width: 768px) {
+      .my-nav .navbar-links {
+        display: flex; }
+        .my-nav .navbar-links li a {
+          color: black;
+          font-weight: 700;
+          margin-left: 15px;
+          text-transform: uppercase; } }
+
+@media (min-width: 600px) {
+  .about-content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start; } }
+.about-content img {
+  display: block;
+  margin: 30px auto; }
+  @media (min-width: 1024px) {
+    .about-content img {
+      margin: 30px; } }
+.about-content .about-text {
+  padding: 20px; }
+  @media (min-width: 1024px) {
+    .about-content .about-text {
+      max-width: 50%; } }
+
+.swapper-wrapper {
+  overflow-x: hidden;
+  position: relative;
+  padding: 0; }
+
+.swapper {
+  display: flex;
+  position: relative;
+  transition: .5s ease-in;
+  right: 0; }
+
+.carousel, .case-study {
+  min-width: 100vw; }
+
+.case-study-visible {
+  right: 100vw; }
+
+.case-study {
+  min-height: 60vh;
+  width: 100vw;
+  padding: 20px; }
+  .case-study .back-chevron, .case-study .back {
+    cursor: pointer; }
+  .case-study .case-study-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+
+.carousel-item {
+  background: center center no-repeat;
+  background-size: cover;
+  cursor: default; }
+
+#style360 {
+  background-image: url("../images/style360.png"); }
+
+#pokemon {
+  background-image: url("../images/pokemon.png"); }
+
+#ebird {
+  background-image: url("../images/ebird.png"); }
+
+#sandwich {
+  background-image: url("../images/sandwich.png"); }
 
 /*# sourceMappingURL=styles.css.map */
