hide case studies until button click, even though they were off-screen they were affecting the height of the work section, creating a bunch of white space

--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -34,6 +34,10 @@
     // left: 50%;
     // transform: translateX(-50%);
   }
+  .overlay {
+    background-color: rgba(0,0,0,0);
+    transition: .2s linear;
+  }
   &:hover {
     .overlay {
       position: absolute;
