successfully made first carousel slide non hover on touch devices

--- a/styles/_case-studies.scss
+++ b/styles/_case-studies.scss
@@ -29,7 +29,7 @@
         height: 60vh;
         overflow-y: scroll;
       };
-      .style360-screenshot {
+      .screenshot {
         width: 100%;
         margin: 0;
       }
