--- a/styles/_case-studies.scss
+++ b/styles/_case-studies.scss
@@ -1,38 +1,112 @@
+
+
+.case-studies {
+  .back-chevron {
+    margin: 0 0 0 20px;
+    text-transform: uppercase;
+    a {
+      color: black;
+    }
+  }
+}
+
 .case-study {
   display: flex;
   flex-direction: column;
   @include desktop {
     flex-direction: row;
   };
-
-  .case-study-text {
-    padding: 30px;
-    margin: 0 auto;
-    h2 {
-      text-align: center;
+  .case-study-left {
+    @include desktop {
+      width: 48%;
+    };
+    .case-study-heading {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      h3 {
+        font-family: 'roboto condensed', sans-serif;
+        text-transform: uppercase;
+        font-weight: 700;
+        text-align: center;
+      }
+      .fa-chevron-left {
+        margin-left: 0;
+        margin-right: 20px;
+      }
     }
-    @include desktop {
-      width: 38%;
-    };
-  }
-  .case-study-content-wrapper {
-    overflow: hidden;
-    width: 100%;
-    @include desktop {
-      width: 60%;
-    };
-    .case-study-content {
-      width: 100%;
-      margin-left: 18px;
-
+    .case-study-text {
+      padding: 0 40px 40px 40px;
+      margin: 0 auto;
       @include desktop {
-        height: 60vh;
-        overflow-y: scroll;
+        // padding: 0px 60px 60px 60px;
       };
-      .screenshot {
-        width: 100%;
-        margin: 0;
+      .case-study-bullets {
+        @include tablet {
+          display: flex;
+          justify-content: center;
+          .case-study-bullets-left {
+            margin-right: 20px;
+          }
+        };
+
       }
     }
   }
+  .case-study-right {
+    @include desktop {
+      width: 48%;
+    };
+    .case-study-content-wrapper {
+      overflow: hidden;
+      width: 100%;
+      position: relative;
+
+      .case-study-content {
+        width: 100%;
+        margin-left: 18px;
+
+        @include desktop {
+          height: 80vh;
+          position: relative;
+          overflow-y: scroll;
+        };
+        .screenshot {
+          width: 100%;
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+
+//back-to-top arrows
+.to-top-desktop, .to-top-tablet-and-down {
+  text-align: center;
+  margin: 40px auto;
+  p {
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+  @include touch {
+    opacity: 0.5;
+    transition: .2s ease-in;
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
+  };
+}
+
+.to-top-desktop {
+  display: none;
+  @include desktop {
+    display: block;
+  };
+}
+.to-top-tablet-and-down {
+  @include desktop {
+    display: none;
+  };
 }
