--- a/styles/_my-styles.scss
+++ b/styles/_my-styles.scss
@@ -64,3 +64,14 @@ section {
   border-top: 1px solid $light-grey;
   margin: 20px auto;
 }
+
+// a {
+//   color: black;
+//   @include touch {
+//     opacity: 0.5;
+//     transition: all .1s ease-in;
+//     &:hover {
+//       opacity: 1;
+//     }
+//   };
+// }
