--- a/styles/styles.css
+++ b/styles/styles.css
@@ -541,12 +541,21 @@ section {
 #work {
   padding: 0; }
 
+#foo {
+  z-index: 100; }
+
 .carousel-item .overlay {
   position: absolute;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0);
   transition: .2s linear; }
+.carousel-item .clear-overlay {
+  position: absolute;
+  left: 8%;
+  height: 100%;
+  width: 85%;
+  z-index: 2; }
 .carousel-item .slide-wrapper {
   height: 100%;
   width: 100%;
@@ -557,7 +566,8 @@ section {
   position: relative; }
   .carousel-item .slide-wrapper .fa-chevron-left, .carousel-item .slide-wrapper .fa-chevron-right {
     opacity: 0;
-    transition: .2s; }
+    transition: .2s;
+    z-index: 2; }
     @media (hover: hover) {
       .carousel-item .slide-wrapper .fa-chevron-left, .carousel-item .slide-wrapper .fa-chevron-right {
         opacity: 0.5; }
