--- a/styles/_case-studies.scss
+++ b/styles/_case-studies.scss
@@ -1,5 +1,3 @@
-
-
 .case-studies {
   .back-chevron {
     margin: 0 0 0 20px;
@@ -8,74 +6,77 @@
       color: black;
     }
   }
-}
-
-.case-study {
-  display: flex;
-  flex-direction: column;
-  @include desktop {
-    flex-direction: row;
-  };
-  .case-study-left {
+  .case-study {
+    display: flex;
+    flex-direction: column;
     @include desktop {
-      width: 48%;
+      flex-direction: row;
     };
-    .case-study-heading {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      h3 {
-        font-family: 'roboto condensed', sans-serif;
-        text-transform: uppercase;
-        font-weight: 700;
-        text-align: center;
-      }
-      .fa-chevron-left {
-        margin-left: 0;
-        margin-right: 20px;
-      }
-    }
-    .case-study-text {
-      padding: 0 40px 40px 40px;
-      margin: 0 auto;
+    .case-study-left, .case-study-right {
       @include desktop {
-        // padding: 0px 60px 60px 60px;
+        width: 48%;
       };
-      .case-study-bullets {
-        @include tablet {
-          display: flex;
-          justify-content: center;
-          .case-study-bullets-left {
-            margin-right: 20px;
-          }
-        };
-
-      }
     }
   }
-  .case-study-right {
-    @include desktop {
-      width: 48%;
-    };
-    .case-study-content-wrapper {
-      overflow: hidden;
-      width: 100%;
-      position: relative;
+}
 
-      .case-study-content {
-        width: 100%;
-        margin-left: 18px;
+//case study left
+.case-study-heading {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  h3 {
+    font-family: 'roboto condensed', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-align: center;
+  }
+  .fa-chevron-left {
+    margin-left: 0;
+    margin-right: 20px;
+  }
+}
 
-        @include desktop {
-          height: 80vh;
-          position: relative;
-          overflow-y: scroll;
-        };
-        .screenshot {
-          width: 100%;
-          margin: 0;
-        }
+.case-study-text {
+  padding: 0 40px 40px 40px;
+  margin: 0 auto;
+  @include desktop {
+    // padding: 0px 60px 60px 60px;
+  };
+  .case-study-bullets {
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+      .case-study-bullets-left {
+        margin-right: 20px;
+        flex-basis: 50%;
       }
+    };
+  }
+  .case-study-paragraph {
+    // padding:
+  }
+}
+
+//case-study right
+.case-study-content-wrapper {
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+
+  .case-study-content {
+    width: 100%;
+    margin-left: 18px;
+
+    @include desktop {
+      height: 80vh;
+      position: relative;
+      overflow-y: scroll;
+    };
+    .screenshot {
+      width: 100%;
+      margin: 0;
+      margin-top: -5px;
     }
   }
 }
@@ -96,7 +97,7 @@
       cursor: pointer;
       opacity: 1;
     }
-  };
+  }
 }
 
 .to-top-desktop {
@@ -108,5 +109,5 @@
 .to-top-tablet-and-down {
   @include desktop {
     display: none;
-  };
+  }
 }
